fix(@vtmn/css): modal indicator overflow (#1068)
* fix(@vtmn/css): modal indicator overflow

* fix(@vtmn/css): modal, remove indocator overflow

* fix(@vtmn/css): modal, remove indocator overflow

--- a/packages/sources/css/src/components/overlays/modal/src/index.css
+++ b/packages/sources/css/src/components/overlays/modal/src/index.css
@@ -75,7 +75,7 @@
 
 .vtmn-modal_content_body {
   margin: rem(16px) 0;
-  overflow: auto;
+  overflow-y: auto;
 }
 
 .vtmn-modal_content_body--text {
@@ -85,29 +85,6 @@
   line-height: rem(24px);
   align-self: flex-start;
   text-align: left;
-}
-
-.vtmn-modal_content_body--overflow-indicator {
-  position: absolute;
-  bottom: 5.5rem;
-  left: rem(32px);
-  right: rem(32px);
-  height: 4rem;
-  background: linear-gradient(
-    180deg,
-    hsl(
-      var(--vtmn-semantic-color_background-primary--h)
-        var(--vtmn-semantic-color_background-primary--s)
-        var(--vtmn-semantic-color_background-primary--l) / 0%
-    ),
-    hsl(
-      var(--vtmn-semantic-color_background-primary--h)
-        var(--vtmn-semantic-color_background-primary--s)
-        var(--vtmn-semantic-color_background-primary--l) / 80%
-    )
-  );
-  overflow: auto;
-  pointer-events: none;
 }
 
 .vtmn-modal_content_actions {
